Session 4: Build service layer with business logic (AppUserService, TaskService, ProjectService)
- Fully implemented TaskService