@@ -6,6 +6,7 @@ import com.tutorial.taskmanager.dto.task.TaskUpdateDto;
 import com.tutorial.taskmanager.enums.TaskStatus;
 import com.tutorial.taskmanager.exception.ResourceNotFoundException;
 import com.tutorial.taskmanager.exception.ValidationException;
+import com.tutorial.taskmanager.mapper.TaskMapper;
 import com.tutorial.taskmanager.model.AppUser;
 import com.tutorial.taskmanager.model.Project;
 import com.tutorial.taskmanager.model.Task;
@@ -27,21 +28,25 @@ import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 /**
  * Comprehensive unit tests for TaskService.
  * <p>
  * Tests all CRUD operations, validation logic, filtering, and business rules.
- * Uses Mockito to mock repository dependencies and AssertJ for assertions.
+ * Uses Mockito to mock repository and mapper dependencies and AssertJ for assertions.
  * <p>
  * Test organization:
- * - Create operations (createTask)
- * - Read operations (findTaskById, getTaskById, getAllTasks)
- * - Update operations (updateTask, assignToProject, removeFromProject)
+ * - Create operations (createTask) - returns TaskResponseDto
+ * - Read operations (findById, getById, findAll) - returns TaskResponseDto
+ * - Update operations (updateTask, assignToProject, removeFromProject) - returns TaskResponseDto
  * - Delete operations (deleteTask)
- * - Filter operations (getTasksByUser, getTasksByProject, getTasksByStatus, etc.)
- * - Date-based queries (getOverdueTasks, getTasksDueBetween)
+ * - Filter operations (findByUserId, findByProjectId, findByStatus, etc.) - returns TaskResponseDto
+ * - Date-based queries (findOverdueTasks, findTasksDueBetween) - returns TaskResponseDto
+ * <p>
+ * Note: Services return DTOs for public API. Controllers pass DTOs to clients.
  */
 @ExtendWith(MockitoExtension.class)
 @DisplayName("TaskService Tests")
@@ -56,6 +61,9 @@ class TaskServiceTest {
     @Mock
     private ProjectRepository projectRepository;
 
+    @Mock
+    private TaskMapper taskMapper;
+
     @InjectMocks
     private TaskService taskService;
 
@@ -63,6 +71,7 @@ class TaskServiceTest {
     private AppUser testUser;
     private Project testProject;
     private Task testTask;
+    private TaskResponseDto testTaskResponseDto;
     private TaskCreateDto createDto;
     private TaskUpdateDto updateDto;
 
@@ -91,6 +100,17 @@ class TaskServiceTest {
         testTask.setDueDate(LocalDateTime.now().plusDays(7));
         testTask.setAppUser(testUser);
         testTask.setProject(testProject);
+
+        // Set up test task response DTO
+        testTaskResponseDto = TaskResponseDto.builder()
+                .id(1L)
+                .title("Test Task")
+                .description("Test Description")
+                .status(TaskStatus.TODO)
+                .dueDate(testTask.getDueDate())
+                .appUserId(1L)
+                .projectId(1L)
+                .build();
 
         // Set up create DTO
         createDto = TaskCreateDto.builder()
@@ -122,22 +142,26 @@ class TaskServiceTest {
             // Arrange
             when(appUserRepository.findById(1L)).thenReturn(Optional.of(testUser));
             when(projectRepository.findById(1L)).thenReturn(Optional.of(testProject));
+            when(taskMapper.toEntity(createDto)).thenReturn(testTask);
             when(taskRepository.save(any(Task.class))).thenReturn(testTask);
+            when(taskMapper.toResponseDto(testTask)).thenReturn(testTaskResponseDto);
 
             // Act
             TaskResponseDto result = taskService.createTask(createDto);
 
             // Assert
             assertThat(result).isNotNull();
-            assertThat(result.getTitle()).isEqualTo(testTask.getTitle());
-            assertThat(result.getDescription()).isEqualTo(testTask.getDescription());
-            assertThat(result.getStatus()).isEqualTo(testTask.getStatus());
-            assertThat(result.getAppUserId()).isEqualTo(testUser.getId());
-            assertThat(result.getProjectId()).isEqualTo(testProject.getId());
+            assertThat(result.getTitle()).isEqualTo(testTaskResponseDto.getTitle());
+            assertThat(result.getDescription()).isEqualTo(testTaskResponseDto.getDescription());
+            assertThat(result.getStatus()).isEqualTo(testTaskResponseDto.getStatus());
+            assertThat(result.getAppUserId()).isEqualTo(1L);
+            assertThat(result.getProjectId()).isEqualTo(1L);
 
             verify(appUserRepository).findById(1L);
             verify(projectRepository).findById(1L);
+            verify(taskMapper).toEntity(createDto);
             verify(taskRepository).save(any(Task.class));
+            verify(taskMapper).toResponseDto(testTask);
         }
 
         @Test
@@ -152,8 +176,18 @@ class TaskServiceTest {
             taskWithoutProject.setAppUser(testUser);
             taskWithoutProject.setProject(null);
 
+            TaskResponseDto responseDtoWithoutProject = TaskResponseDto.builder()
+                .id(1L)
+                .title(createDto.getTitle())
+                .description(createDto.getDescription())
+                .appUserId(1L)
+                .projectId(null)
+                .build();
+
             when(appUserRepository.findById(1L)).thenReturn(Optional.of(testUser));
+            when(taskMapper.toEntity(createDto)).thenReturn(taskWithoutProject);
             when(taskRepository.save(any(Task.class))).thenReturn(taskWithoutProject);
+            when(taskMapper.toResponseDto(taskWithoutProject)).thenReturn(responseDtoWithoutProject);
 
             // Act
             TaskResponseDto result = taskService.createTask(createDto);
@@ -174,7 +208,9 @@ class TaskServiceTest {
             createDto.setDueDate(null);
             when(appUserRepository.findById(1L)).thenReturn(Optional.of(testUser));
             when(projectRepository.findById(1L)).thenReturn(Optional.of(testProject));
+            when(taskMapper.toEntity(createDto)).thenReturn(testTask);
             when(taskRepository.save(any(Task.class))).thenReturn(testTask);
+            when(taskMapper.toResponseDto(testTask)).thenReturn(testTaskResponseDto);
 
             // Act
             TaskResponseDto result = taskService.createTask(createDto);
@@ -192,8 +228,8 @@ class TaskServiceTest {
 
             // Act & Assert
             assertThatThrownBy(() -> taskService.createTask(createDto))
-                    .isInstanceOf(ResourceNotFoundException.class)
-                    .hasMessageContaining("User not found with id: 1");
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessageContaining("appUser with id '1' not found");
 
             verify(appUserRepository).findById(1L);
             verify(taskRepository, never()).save(any(Task.class));
@@ -208,8 +244,8 @@ class TaskServiceTest {
 
             // Act & Assert
             assertThatThrownBy(() -> taskService.createTask(createDto))
-                    .isInstanceOf(ResourceNotFoundException.class)
-                    .hasMessageContaining("Project not found with id: 1");
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessageContaining("project with id '1' not found");
 
             verify(appUserRepository).findById(1L);
             verify(projectRepository).findById(1L);
@@ -230,8 +266,8 @@ class TaskServiceTest {
 
             // Act & Assert
             assertThatThrownBy(() -> taskService.createTask(createDto))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("Project does not belong to user");
+                .isInstanceOf(ValidationException.class)
+                .hasMessageContaining("Project does not belong to user");
 
             verify(appUserRepository).findById(1L);
             verify(projectRepository).findById(1L);
@@ -244,11 +280,13 @@ class TaskServiceTest {
             // Arrange
             when(appUserRepository.findById(1L)).thenReturn(Optional.of(testUser));
             when(projectRepository.findById(1L)).thenReturn(Optional.of(testProject));
+            when(taskMapper.toEntity(createDto)).thenReturn(testTask);
             when(taskRepository.save(any(Task.class))).thenAnswer(invocation -> {
                 Task savedTask = invocation.getArgument(0);
                 assertThat(savedTask.getStatus()).isEqualTo(TaskStatus.TODO);
                 return testTask;
             });
+            when(taskMapper.toResponseDto(testTask)).thenReturn(testTaskResponseDto);
 
             // Act
             taskService.createTask(createDto);
@@ -269,16 +307,18 @@ class TaskServiceTest {
         void shouldFindTaskById() {
             // Arrange
             when(taskRepository.findById(1L)).thenReturn(Optional.of(testTask));
+            when(taskMapper.toResponseDto(testTask)).thenReturn(testTaskResponseDto);
 
             // Act
-            Optional<TaskResponseDto> result = taskService.findTaskById(1L);
+            Optional<TaskResponseDto> result = taskService.findById(1L);
 
             // Assert
             assertThat(result).isPresent();
             assertThat(result.get().getId()).isEqualTo(1L);
-            assertThat(result.get().getTitle()).isEqualTo(testTask.getTitle());
+            assertThat(result.get().getTitle()).isEqualTo(testTaskResponseDto.getTitle());
 
             verify(taskRepository).findById(1L);
+            verify(taskMapper).toResponseDto(testTask);
         }
 
         @Test
@@ -288,7 +328,7 @@ class TaskServiceTest {
             when(taskRepository.findById(99L)).thenReturn(Optional.empty());
 
             // Act
-            Optional<TaskResponseDto> result = taskService.findTaskById(99L);
+            Optional<TaskResponseDto> result = taskService.findById(99L);
 
             // Assert
             assertThat(result).isEmpty();
@@ -296,18 +336,31 @@ class TaskServiceTest {
         }
 
         @Test
+        @DisplayName("Should throw exception when getting optional task but id is null")
+        void shouldThrowExceptionWhenGettingOptionalTaskButIdIsNull() {
+            // Act & Assert
+            assertThatThrownBy(() -> taskService.findById(null))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("id is null");
+
+            verify(taskRepository, never()).findById(anyLong());
+        }
+
+        @Test
         @DisplayName("Should get task by ID (throws exception)")
         void shouldGetTaskById() {
             // Arrange
             when(taskRepository.findById(1L)).thenReturn(Optional.of(testTask));
+            when(taskMapper.toResponseDto(testTask)).thenReturn(testTaskResponseDto);
 
             // Act
-            TaskResponseDto result = taskService.getTaskById(1L);
+            TaskResponseDto result = taskService.getById(1L);
 
             // Assert
             assertThat(result).isNotNull();
             assertThat(result.getId()).isEqualTo(1L);
             verify(taskRepository).findById(1L);
+            verify(taskMapper).toResponseDto(testTask);
         }
 
         @Test
@@ -317,47 +370,72 @@ class TaskServiceTest {
             when(taskRepository.findById(99L)).thenReturn(Optional.empty());
 
             // Act & Assert
-            assertThatThrownBy(() -> taskService.getTaskById(99L))
-                    .isInstanceOf(ResourceNotFoundException.class)
-                    .hasMessageContaining("Task not found with id: 99");
+            assertThatThrownBy(() -> taskService.getById(99L))
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessageContaining("task with id '99' not found");
 
             verify(taskRepository).findById(99L);
         }
 
         @Test
+        @DisplayName("Should throw exception when getting task but id is null")
+        void shouldThrowExceptionWhenGettingTaskButIdIsNull() {
+            // Act & Assert
+            assertThatThrownBy(() -> taskService.findById(null))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("id is null");
+
+            verify(taskRepository, never()).findById(anyLong());
+        }
+
+        @Test
         @DisplayName("Should get all tasks")
-        void shouldGetAllTasks() {
+        void shouldFindAllTasks() {
             // Arrange
             Task task2 = new Task();
             task2.setId(2L);
             task2.setTitle("Task 2");
             task2.setAppUser(testUser);
 
-            when(taskRepository.findAll()).thenReturn(List.of(testTask, task2));
+            TaskResponseDto task2ResponseDto = TaskResponseDto.builder()
+                .id(2L)
+                .title("Task 2")
+                .appUserId(1L)
+                .build();
+
+            List<Task> tasks = List.of(testTask, task2);
+            List<TaskResponseDto> responseDtos = List.of(testTaskResponseDto, task2ResponseDto);
+
+            when(taskRepository.findAll()).thenReturn(tasks);
+            when(taskMapper.toResponseDtoList(tasks)).thenReturn(responseDtos);
 
             // Act
-            List<TaskResponseDto> results = taskService.getAllTasks();
+            List<TaskResponseDto> results = taskService.findAll();
 
             // Assert
             assertThat(results).hasSize(2);
             assertThat(results).extracting(TaskResponseDto::getId)
-                    .containsExactly(1L, 2L);
+                .containsExactly(1L, 2L);
 
             verify(taskRepository).findAll();
+            verify(taskMapper).toResponseDtoList(tasks);
         }
 
         @Test
         @DisplayName("Should return empty list when no tasks exist")
         void shouldReturnEmptyListWhenNoTasks() {
             // Arrange
-            when(taskRepository.findAll()).thenReturn(List.of());
+            List<Task> emptyList = List.of();
+            when(taskRepository.findAll()).thenReturn(emptyList);
+            when(taskMapper.toResponseDtoList(emptyList)).thenReturn(List.of());
 
             // Act
-            List<TaskResponseDto> results = taskService.getAllTasks();
+            List<TaskResponseDto> results = taskService.findAll();
 
             // Assert
             assertThat(results).isEmpty();
             verify(taskRepository).findAll();
+            verify(taskMapper).toResponseDtoList(emptyList);
         }
     }
 
@@ -371,8 +449,19 @@ class TaskServiceTest {
         @DisplayName("Should update all task fields")
         void shouldUpdateAllTaskFields() {
             // Arrange
+            TaskResponseDto updatedResponseDto = TaskResponseDto.builder()
+                .id(1L)
+                .title(updateDto.getTitle())
+                .description(updateDto.getDescription())
+                .status(updateDto.getStatus())
+                .dueDate(updateDto.getDueDate())
+                .appUserId(1L)
+                .projectId(1L)
+                .build();
+
             when(taskRepository.findById(1L)).thenReturn(Optional.of(testTask));
-            when(taskRepository.save(any(Task.class))).thenAnswer(invocation -> invocation.getArgument(0));
+            when(taskRepository.save(any(Task.class))).thenReturn(testTask);
+            when(taskMapper.toResponseDto(testTask)).thenReturn(updatedResponseDto);
 
             // Act
             TaskResponseDto result = taskService.updateTask(1L, updateDto);
@@ -385,27 +474,39 @@ class TaskServiceTest {
             assertThat(result.getDueDate()).isEqualTo(updateDto.getDueDate());
 
             verify(taskRepository).findById(1L);
+            verify(taskMapper).updateEntityFromDto(updateDto, testTask);
             verify(taskRepository).save(testTask);
+            verify(taskMapper).toResponseDto(testTask);
         }
-
         @Test
         @DisplayName("Should update only provided fields (partial update)")
         void shouldUpdateOnlyProvidedFields() {
             // Arrange
-            String originalTitle = testTask.getTitle();
             updateDto.setTitle(null);  // Don't update title
             updateDto.setDescription(null);  // Don't update description
 
+            TaskResponseDto partiallyUpdatedDto = TaskResponseDto.builder()
+                .id(1L)
+                .title(testTask.getTitle())  // Original title
+                .description(testTask.getDescription())  // Original description
+                .status(updateDto.getStatus())  // Updated status
+                .dueDate(updateDto.getDueDate())
+                .appUserId(1L)
+                .projectId(1L)
+                .build();
+
             when(taskRepository.findById(1L)).thenReturn(Optional.of(testTask));
-            when(taskRepository.save(any(Task.class))).thenAnswer(invocation -> invocation.getArgument(0));
+            when(taskRepository.save(any(Task.class))).thenReturn(testTask);
+            when(taskMapper.toResponseDto(testTask)).thenReturn(partiallyUpdatedDto);
 
             // Act
             TaskResponseDto result = taskService.updateTask(1L, updateDto);
 
             // Assert
-            assertThat(result.getTitle()).isEqualTo(originalTitle);  // Unchanged
+            assertThat(result.getTitle()).isEqualTo(testTask.getTitle());  // Unchanged
             assertThat(result.getStatus()).isEqualTo(updateDto.getStatus());  // Changed
 
+            verify(taskMapper).updateEntityFromDto(updateDto, testTask);
             verify(taskRepository).save(testTask);
         }
 
@@ -417,8 +518,8 @@ class TaskServiceTest {
 
             // Act & Assert
             assertThatThrownBy(() -> taskService.updateTask(99L, updateDto))
-                    .isInstanceOf(ResourceNotFoundException.class)
-                    .hasMessageContaining("Task not found with id: 99");
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessageContaining("task with id '99' not found");
 
             verify(taskRepository).findById(99L);
             verify(taskRepository, never()).save(any(Task.class));
@@ -429,9 +530,17 @@ class TaskServiceTest {
         void shouldAssignTaskToProject() {
             // Arrange
             testTask.setProject(null);  // Start with no project
+            TaskResponseDto assignedResponseDto = TaskResponseDto.builder()
+                .id(1L)
+                .title(testTask.getTitle())
+                .appUserId(1L)
+                .projectId(1L)
+                .build();
+
             when(taskRepository.findById(1L)).thenReturn(Optional.of(testTask));
             when(projectRepository.findById(1L)).thenReturn(Optional.of(testProject));
-            when(taskRepository.save(any(Task.class))).thenAnswer(invocation -> invocation.getArgument(0));
+            when(taskRepository.save(any(Task.class))).thenReturn(testTask);
+            when(taskMapper.toResponseDto(testTask)).thenReturn(assignedResponseDto);
 
             // Act
             TaskResponseDto result = taskService.assignToProject(1L, 1L);
@@ -439,11 +548,11 @@ class TaskServiceTest {
             // Assert
             assertThat(result).isNotNull();
             assertThat(result.getProjectId()).isEqualTo(1L);
-            assertThat(testTask.getProject()).isEqualTo(testProject);
 
             verify(taskRepository).findById(1L);
             verify(projectRepository).findById(1L);
             verify(taskRepository).save(testTask);
+            verify(taskMapper).toResponseDto(testTask);
         }
 
         @Test
@@ -455,8 +564,8 @@ class TaskServiceTest {
 
             // Act & Assert
             assertThatThrownBy(() -> taskService.assignToProject(1L, 99L))
-                    .isInstanceOf(ResourceNotFoundException.class)
-                    .hasMessageContaining("Project not found with id: 99");
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessageContaining("project with id '99' not found");
 
             verify(taskRepository).findById(1L);
             verify(projectRepository).findById(99L);
@@ -476,8 +585,8 @@ class TaskServiceTest {
 
             // Act & Assert
             assertThatThrownBy(() -> taskService.assignToProject(1L, 1L))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("Project does not belong to the same user as the task");
+                .isInstanceOf(ValidationException.class)
+                .hasMessageContaining("Project does not belong to the same user as the task");
 
             verify(taskRepository).findById(1L);
             verify(projectRepository).findById(1L);
@@ -488,8 +597,16 @@ class TaskServiceTest {
         @DisplayName("Should remove task from project")
         void shouldRemoveTaskFromProject() {
             // Arrange
+            TaskResponseDto removedFromProjectDto = TaskResponseDto.builder()
+                .id(1L)
+                .title(testTask.getTitle())
+                .appUserId(1L)
+                .projectId(null)
+                .build();
+
             when(taskRepository.findById(1L)).thenReturn(Optional.of(testTask));
-            when(taskRepository.save(any(Task.class))).thenAnswer(invocation -> invocation.getArgument(0));
+            when(taskRepository.save(any(Task.class))).thenReturn(testTask);
+            when(taskMapper.toResponseDto(testTask)).thenReturn(removedFromProjectDto);
 
             // Act
             TaskResponseDto result = taskService.removeFromProject(1L);
@@ -497,10 +614,10 @@ class TaskServiceTest {
             // Assert
             assertThat(result).isNotNull();
             assertThat(result.getProjectId()).isNull();
-            assertThat(testTask.getProject()).isNull();
 
             verify(taskRepository).findById(1L);
             verify(taskRepository).save(testTask);
+            verify(taskMapper).toResponseDto(testTask);
         }
 
         @Test
@@ -511,8 +628,8 @@ class TaskServiceTest {
 
             // Act & Assert
             assertThatThrownBy(() -> taskService.removeFromProject(99L))
-                    .isInstanceOf(ResourceNotFoundException.class)
-                    .hasMessageContaining("Task not found with id: 99");
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessageContaining("task with id '99' not found");
 
             verify(taskRepository).findById(99L);
             verify(taskRepository, never()).save(any(Task.class));
@@ -548,8 +665,8 @@ class TaskServiceTest {
 
             // Act & Assert
             assertThatThrownBy(() -> taskService.deleteTask(99L))
-                    .isInstanceOf(ResourceNotFoundException.class)
-                    .hasMessageContaining("Task not found with id: 99");
+                .isInstanceOf(ResourceNotFoundException.class)
+                .hasMessageContaining("task with id '99' not found");
 
             verify(taskRepository).existsById(99L);
             verify(taskRepository, never()).deleteById(anyLong());
@@ -564,29 +681,40 @@ class TaskServiceTest {
 
         @Test
         @DisplayName("Should get tasks by user ID")
-        void shouldGetTasksByUserId() {
+        void shouldFindTasksByUserId() {
             // Arrange
             Task task2 = new Task();
             task2.setId(2L);
             task2.setTitle("Task 2");
             task2.setAppUser(testUser);
 
-            when(taskRepository.findByAppUserId(1L)).thenReturn(List.of(testTask, task2));
+            TaskResponseDto task2ResponseDto = TaskResponseDto.builder()
+                .id(2L)
+                .title("Task 2")
+                .appUserId(1L)
+                .build();
+
+            List<Task> tasks = List.of(testTask, task2);
+            List<TaskResponseDto> responseDtos = List.of(testTaskResponseDto, task2ResponseDto);
+
+            when(taskRepository.findByAppUserId(1L)).thenReturn(tasks);
+            when(taskMapper.toResponseDtoList(tasks)).thenReturn(responseDtos);
 
             // Act
-            List<TaskResponseDto> results = taskService.getTasksByUserId(1L);
+            List<TaskResponseDto> results = taskService.findByAppUserId(1L);
 
             // Assert
             assertThat(results).hasSize(2);
             assertThat(results).extracting(TaskResponseDto::getAppUserId)
-                    .containsOnly(1L);
+                .containsOnly(1L);
 
             verify(taskRepository).findByAppUserId(1L);
+            verify(taskMapper).toResponseDtoList(tasks);
         }
 
         @Test
         @DisplayName("Should get tasks by project ID")
-        void shouldGetTasksByProjectId() {
+        void shouldFindTasksByProjectId() {
             // Arrange
             Task task2 = new Task();
             task2.setId(2L);
@@ -594,83 +722,111 @@ class TaskServiceTest {
             task2.setAppUser(testUser);
             task2.setProject(testProject);
 
-            when(taskRepository.findByProjectId(1L)).thenReturn(List.of(testTask, task2));
+            TaskResponseDto task2ResponseDto = TaskResponseDto.builder()
+                .id(2L)
+                .title("Task 2")
+                .appUserId(1L)
+                .projectId(1L)
+                .build();
+
+            List<Task> tasks = List.of(testTask, task2);
+            List<TaskResponseDto> responseDtos = List.of(testTaskResponseDto, task2ResponseDto);
+
+            when(taskRepository.findByProjectId(1L)).thenReturn(tasks);
+            when(taskMapper.toResponseDtoList(tasks)).thenReturn(responseDtos);
 
             // Act
-            List<TaskResponseDto> results = taskService.getTasksByProjectId(1L);
+            List<TaskResponseDto> results = taskService.findByProjectId(1L);
 
             // Assert
             assertThat(results).hasSize(2);
             assertThat(results).extracting(TaskResponseDto::getProjectId)
-                    .containsOnly(1L);
+                .containsOnly(1L);
 
             verify(taskRepository).findByProjectId(1L);
+            verify(taskMapper).toResponseDtoList(tasks);
         }
 
         @Test
         @DisplayName("Should get tasks by status")
-        void shouldGetTasksByStatus() {
+        void shouldFindTasksByStatus() {
             // Arrange
-            when(taskRepository.findByStatus(TaskStatus.TODO)).thenReturn(List.of(testTask));
+            List<Task> tasks = List.of(testTask);
+            List<TaskResponseDto> responseDtos = List.of(testTaskResponseDto);
+
+            when(taskRepository.findByStatus(TaskStatus.TODO)).thenReturn(tasks);
+            when(taskMapper.toResponseDtoList(tasks)).thenReturn(responseDtos);
 
             // Act
-            List<TaskResponseDto> results = taskService.getTasksByStatus(TaskStatus.TODO);
+            List<TaskResponseDto> results = taskService.findByStatus(TaskStatus.TODO);
 
             // Assert
             assertThat(results).hasSize(1);
-            assertThat(results.get(0).getStatus()).isEqualTo(TaskStatus.TODO);
+            assertThat(results.getFirst().getStatus()).isEqualTo(TaskStatus.TODO);
 
             verify(taskRepository).findByStatus(TaskStatus.TODO);
+            verify(taskMapper).toResponseDtoList(tasks);
         }
 
         @Test
         @DisplayName("Should get tasks by user and status")
-        void shouldGetTasksByUserIdAndStatus() {
+        void shouldFindTasksByUserIdAndStatus() {
             // Arrange
-            when(taskRepository.findByAppUserIdAndStatus(1L, TaskStatus.TODO))
-                    .thenReturn(List.of(testTask));
+            List<Task> tasks = List.of(testTask);
+            List<TaskResponseDto> responseDtos = List.of(testTaskResponseDto);
+
+            when(taskRepository.findByAppUserIdAndStatus(1L, TaskStatus.TODO)).thenReturn(tasks);
+            when(taskMapper.toResponseDtoList(tasks)).thenReturn(responseDtos);
 
             // Act
-            List<TaskResponseDto> results = taskService.getTasksByUserIdAndStatus(1L, TaskStatus.TODO);
+            List<TaskResponseDto> results = taskService.findByAppUserIdAndStatus(1L, TaskStatus.TODO);
 
             // Assert
             assertThat(results).hasSize(1);
-            assertThat(results.get(0).getAppUserId()).isEqualTo(1L);
-            assertThat(results.get(0).getStatus()).isEqualTo(TaskStatus.TODO);
+            assertThat(results.getFirst().getAppUserId()).isEqualTo(1L);
+            assertThat(results.getFirst().getStatus()).isEqualTo(TaskStatus.TODO);
 
             verify(taskRepository).findByAppUserIdAndStatus(1L, TaskStatus.TODO);
+            verify(taskMapper).toResponseDtoList(tasks);
         }
 
         @Test
         @DisplayName("Should get tasks by project and status")
-        void shouldGetTasksByProjectIdAndStatus() {
+        void shouldFindTasksByProjectIdAndStatus() {
             // Arrange
-            when(taskRepository.findByProjectIdAndStatus(1L, TaskStatus.TODO))
-                    .thenReturn(List.of(testTask));
+            List<Task> tasks = List.of(testTask);
+            List<TaskResponseDto> responseDtos = List.of(testTaskResponseDto);
+
+            when(taskRepository.findByProjectIdAndStatus(1L, TaskStatus.TODO)).thenReturn(tasks);
+            when(taskMapper.toResponseDtoList(tasks)).thenReturn(responseDtos);
 
             // Act
-            List<TaskResponseDto> results = taskService.getTasksByProjectIdAndStatus(1L, TaskStatus.TODO);
+            List<TaskResponseDto> results = taskService.findByProjectIdAndStatus(1L, TaskStatus.TODO);
 
             // Assert
             assertThat(results).hasSize(1);
-            assertThat(results.get(0).getProjectId()).isEqualTo(1L);
-            assertThat(results.get(0).getStatus()).isEqualTo(TaskStatus.TODO);
+            assertThat(results.getFirst().getProjectId()).isEqualTo(1L);
+            assertThat(results.getFirst().getStatus()).isEqualTo(TaskStatus.TODO);
 
             verify(taskRepository).findByProjectIdAndStatus(1L, TaskStatus.TODO);
+            verify(taskMapper).toResponseDtoList(tasks);
         }
 
         @Test
         @DisplayName("Should return empty list when no tasks match filters")
         void shouldReturnEmptyListWhenNoTasksMatchFilters() {
             // Arrange
-            when(taskRepository.findByStatus(TaskStatus.COMPLETED)).thenReturn(List.of());
+            List<Task> emptyList = List.of();
+            when(taskRepository.findByStatus(TaskStatus.COMPLETED)).thenReturn(emptyList);
+            when(taskMapper.toResponseDtoList(emptyList)).thenReturn(List.of());
 
             // Act
-            List<TaskResponseDto> results = taskService.getTasksByStatus(TaskStatus.COMPLETED);
+            List<TaskResponseDto> results = taskService.findByStatus(TaskStatus.COMPLETED);
 
             // Assert
             assertThat(results).isEmpty();
             verify(taskRepository).findByStatus(TaskStatus.COMPLETED);
+            verify(taskMapper).toResponseDtoList(emptyList);
         }
     }
 
@@ -682,7 +838,7 @@ class TaskServiceTest {
 
         @Test
         @DisplayName("Should get overdue tasks")
-        void shouldGetOverdueTasks() {
+        void shouldFindOverdueTasks() {
             // Arrange
             Task overdueTask = new Task();
             overdueTask.setId(2L);
@@ -691,27 +847,39 @@ class TaskServiceTest {
             overdueTask.setStatus(TaskStatus.TODO);
             overdueTask.setAppUser(testUser);
 
+            TaskResponseDto overdueTaskResponseDto = TaskResponseDto.builder()
+                .id(2L)
+                .title("Overdue Task")
+                .status(TaskStatus.TODO)
+                .appUserId(1L)
+                .build();
+
+            List<Task> overdueTasks = List.of(overdueTask);
+            List<TaskResponseDto> responseDtos = List.of(overdueTaskResponseDto);
+
             when(taskRepository.findByDueDateBeforeAndStatusNotIn(
-                    any(LocalDateTime.class),
-                    eq(List.of(TaskStatus.COMPLETED, TaskStatus.CANCELLED))
-            )).thenReturn(List.of(overdueTask));
+                any(LocalDateTime.class),
+                eq(List.of(TaskStatus.COMPLETED, TaskStatus.CANCELLED))
+            )).thenReturn(overdueTasks);
+            when(taskMapper.toResponseDtoList(overdueTasks)).thenReturn(responseDtos);
 
             // Act
-            List<TaskResponseDto> results = taskService.getOverdueTasks();
+            List<TaskResponseDto> results = taskService.findOverdueTasks();
 
             // Assert
             assertThat(results).hasSize(1);
-            assertThat(results.get(0).getId()).isEqualTo(2L);
+            assertThat(results.getFirst().getId()).isEqualTo(2L);
 
             verify(taskRepository).findByDueDateBeforeAndStatusNotIn(
-                    any(LocalDateTime.class),
-                    eq(List.of(TaskStatus.COMPLETED, TaskStatus.CANCELLED))
+                any(LocalDateTime.class),
+                eq(List.of(TaskStatus.COMPLETED, TaskStatus.CANCELLED))
             );
+            verify(taskMapper).toResponseDtoList(overdueTasks);
         }
 
         @Test
         @DisplayName("Should get overdue tasks for specific user")
-        void shouldGetOverdueTasksForUser() {
+        void shouldFindOverdueTasksForUser() {
             // Arrange
             Task overdueTask = new Task();
             overdueTask.setId(2L);
@@ -720,58 +888,77 @@ class TaskServiceTest {
             overdueTask.setStatus(TaskStatus.TODO);
             overdueTask.setAppUser(testUser);
 
+            TaskResponseDto overdueTaskResponseDto = TaskResponseDto.builder()
+                .id(2L)
+                .title("Overdue Task")
+                .status(TaskStatus.TODO)
+                .appUserId(1L)
+                .build();
+
+            List<Task> overdueTasks = List.of(overdueTask);
+            List<TaskResponseDto> responseDtos = List.of(overdueTaskResponseDto);
+
             when(taskRepository.findByAppUserIdAndDueDateBeforeAndStatusNotIn(
-                    eq(1L),
-                    any(LocalDateTime.class),
-                    eq(List.of(TaskStatus.COMPLETED, TaskStatus.CANCELLED))
-            )).thenReturn(List.of(overdueTask));
+                eq(1L),
+                any(LocalDateTime.class),
+                eq(List.of(TaskStatus.COMPLETED, TaskStatus.CANCELLED))
+            )).thenReturn(overdueTasks);
+            when(taskMapper.toResponseDtoList(overdueTasks)).thenReturn(responseDtos);
 
             // Act
-            List<TaskResponseDto> results = taskService.getOverdueTasksForUser(1L);
+            List<TaskResponseDto> results = taskService.findOverdueTasksByAppUserId(1L);
 
             // Assert
             assertThat(results).hasSize(1);
-            assertThat(results.get(0).getAppUserId()).isEqualTo(1L);
+            assertThat(results.getFirst().getAppUserId()).isEqualTo(1L);
 
             verify(taskRepository).findByAppUserIdAndDueDateBeforeAndStatusNotIn(
-                    eq(1L),
-                    any(LocalDateTime.class),
-                    eq(List.of(TaskStatus.COMPLETED, TaskStatus.CANCELLED))
+                eq(1L),
+                any(LocalDateTime.class),
+                eq(List.of(TaskStatus.COMPLETED, TaskStatus.CANCELLED))
             );
+            verify(taskMapper).toResponseDtoList(overdueTasks);
         }
 
         @Test
         @DisplayName("Should get tasks due between dates")
-        void shouldGetTasksDueBetween() {
+        void shouldFindTasksDueBetween() {
             // Arrange
             LocalDateTime startDate = LocalDateTime.now();
             LocalDateTime endDate = LocalDateTime.now().plusDays(7);
 
-            when(taskRepository.findByDueDateBetween(startDate, endDate))
-                    .thenReturn(List.of(testTask));
+            List<Task> tasks = List.of(testTask);
+            List<TaskResponseDto> responseDtos = List.of(testTaskResponseDto);
+
+            when(taskRepository.findByDueDateBetween(startDate, endDate)).thenReturn(tasks);
+            when(taskMapper.toResponseDtoList(tasks)).thenReturn(responseDtos);
 
             // Act
-            List<TaskResponseDto> results = taskService.getTasksDueBetween(startDate, endDate);
+            List<TaskResponseDto> results = taskService.findByDueDateBetween(startDate, endDate);
 
             // Assert
             assertThat(results).hasSize(1);
             verify(taskRepository).findByDueDateBetween(startDate, endDate);
+            verify(taskMapper).toResponseDtoList(tasks);
         }
 
         @Test
         @DisplayName("Should return empty list when no overdue tasks")
         void shouldReturnEmptyListWhenNoOverdueTasks() {
             // Arrange
+            List<Task> emptyList = List.of();
             when(taskRepository.findByDueDateBeforeAndStatusNotIn(
-                    any(LocalDateTime.class),
-                    eq(List.of(TaskStatus.COMPLETED, TaskStatus.CANCELLED))
-            )).thenReturn(List.of());
+                any(LocalDateTime.class),
+                eq(List.of(TaskStatus.COMPLETED, TaskStatus.CANCELLED))
+            )).thenReturn(emptyList);
+            when(taskMapper.toResponseDtoList(emptyList)).thenReturn(List.of());
 
             // Act
-            List<TaskResponseDto> results = taskService.getOverdueTasks();
+            List<TaskResponseDto> results = taskService.findOverdueTasks();
 
             // Assert
             assertThat(results).isEmpty();
+            verify(taskMapper).toResponseDtoList(emptyList);
         }
     }
 }
